fix: Scroll map 메서드 스트림 toList() 사용
#5