@@ -5,7 +5,6 @@ import lombok.Getter;
 
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Getter
 @AllArgsConstructor
@@ -14,8 +13,8 @@ public class Scroll<T> {
     private Object nextCursor;
     private Object nextSubCursor;
 
-    public <U> Scroll<U> map(Function<? super T, ? extends U> converter) {
-        List<U> list = content.stream().map(converter).collect(Collectors.toList());
+    public <U> Scroll<U> map(Function<? super T, U> converter) {
+        List<U> list = content.stream().map(converter).toList();
         return new Scroll<>(list, nextCursor, nextSubCursor);
     }
 }
